syntax = "proto3";

option java_multiple_files = true;

option java_package = "inventoryGrpc";


service InventoryService{
  rpc isInStock(InventoryRequest) returns (InventoryResponse);
  rpc deductFromInventoryGrpc(InventoryRequest) returns (InventoryResponse);
}

message ProductRequest{
  string productId = 1;
  int32 quantity = 2;
}
message ProductResponse{
  string productId = 1;
  bool isInStock = 2;
}

message InventoryRequest{
  repeated ProductRequest product = 1;
}

message InventoryResponse{
  repeated ProductResponse product = 1;
}